[gd_scene load_steps=6 format=2]

[ext_resource path="res://styles/fonts/title.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/screens/edit_value_base.gd" type="Script" id=3]
[ext_resource path="res://styles/themes/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://styles/themes/edit_button.tres" type="Theme" id=5]
[ext_resource path="res://scripts/elements/common/action_button.gd" type="Script" id=6]

[node name="screen2" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
header_title = "screen_title_edit_value"

[node name="keyboard" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -360.0
margin_top = -576.0
margin_right = 360.0
margin_bottom = -88.0

[node name="panel" type="Panel" parent="keyboard"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 561.0
__meta__ = {
"_edit_lock_": true
}

[node name="margin_container" type="MarginContainer" parent="keyboard"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 561.0
__meta__ = {
"_edit_lock_": true
}

[node name="v_box_container" type="VBoxContainer" parent="keyboard/margin_container"]
margin_left = 20.0
margin_top = 20.0
margin_right = 660.0
margin_bottom = 521.0
__meta__ = {
"_edit_lock_": true
}

[node name="h_box_container" type="HBoxContainer" parent="keyboard/margin_container/v_box_container"]
margin_right = 640.0
margin_bottom = 105.0
custom_constants/separation = 0
__meta__ = {
"_edit_lock_": true
}

[node name="button" type="Button" parent="keyboard/margin_container/v_box_container/h_box_container"]
margin_right = 115.0
margin_bottom = 105.0
rect_min_size = Vector2( 104, 0 )
text = "-10"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_adjust_value"
method_binds = [ -10.0 ]

[node name="button2" type="Button" parent="keyboard/margin_container/v_box_container/h_box_container"]
margin_left = 115.0
margin_right = 219.0
margin_bottom = 105.0
rect_min_size = Vector2( 104, 0 )
text = "-1"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_adjust_value"
method_binds = [ -1.0 ]

[node name="field" type="Button" parent="keyboard/margin_container/v_box_container/h_box_container"]
margin_left = 219.0
margin_right = 407.0
margin_bottom = 105.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "-1"
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="button3" type="Button" parent="keyboard/margin_container/v_box_container/h_box_container"]
margin_left = 407.0
margin_right = 511.0
margin_bottom = 105.0
rect_min_size = Vector2( 104, 0 )
text = "+1"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_adjust_value"
method_binds = [ 1.0 ]

[node name="button4" type="Button" parent="keyboard/margin_container/v_box_container/h_box_container"]
margin_left = 511.0
margin_right = 640.0
margin_bottom = 105.0
rect_min_size = Vector2( 104, 0 )
text = "+10"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_adjust_value"
method_binds = [ 10.0 ]

[node name="grid_container" type="GridContainer" parent="keyboard/margin_container/v_box_container"]
margin_top = 117.0
margin_right = 640.0
margin_bottom = 501.0
custom_constants/vseparation = -12
custom_constants/hseparation = -12
columns = 4
__meta__ = {
"_edit_lock_": true
}

[node name="button" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_right = 169.0
margin_bottom = 105.0
size_flags_horizontal = 3
text = "7"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_number"
method_binds = [ 7 ]

[node name="button2" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_left = 157.0
margin_right = 326.0
margin_bottom = 105.0
size_flags_horizontal = 3
text = "8"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_number"
method_binds = [ 8 ]

[node name="button3" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_left = 314.0
margin_right = 483.0
margin_bottom = 105.0
size_flags_horizontal = 3
text = "9"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_number"
method_binds = [ 9 ]

[node name="button_clear" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_left = 471.0
margin_right = 640.0
margin_bottom = 105.0
size_flags_horizontal = 3
text = "C"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_clear"

[node name="button5" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_top = 93.0
margin_right = 169.0
margin_bottom = 198.0
size_flags_horizontal = 3
text = "4"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_number"
method_binds = [ 4 ]

[node name="button6" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_left = 157.0
margin_top = 93.0
margin_right = 326.0
margin_bottom = 198.0
size_flags_horizontal = 3
text = "5"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_number"
method_binds = [ 5 ]

[node name="button7" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_left = 314.0
margin_top = 93.0
margin_right = 483.0
margin_bottom = 198.0
size_flags_horizontal = 3
text = "6"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_number"
method_binds = [ 6 ]

[node name="button_erase" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_left = 471.0
margin_top = 93.0
margin_right = 640.0
margin_bottom = 198.0
size_flags_horizontal = 3
text = "<X"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_erase"

[node name="button9" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_top = 186.0
margin_right = 169.0
margin_bottom = 291.0
size_flags_horizontal = 3
text = "1"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_number"
method_binds = [ 1 ]

[node name="button10" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_left = 157.0
margin_top = 186.0
margin_right = 326.0
margin_bottom = 291.0
size_flags_horizontal = 3
text = "2"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_number"
method_binds = [ 2 ]

[node name="button11" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_left = 314.0
margin_top = 186.0
margin_right = 483.0
margin_bottom = 291.0
size_flags_horizontal = 3
text = "3"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_number"
method_binds = [ 3 ]

[node name="button_negative" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_left = 471.0
margin_top = 186.0
margin_right = 640.0
margin_bottom = 291.0
size_flags_horizontal = 3
text = "+/-"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_negative"

[node name="button_point" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_top = 279.0
margin_right = 169.0
margin_bottom = 384.0
size_flags_horizontal = 3
text = "."
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_point"

[node name="button13" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_left = 157.0
margin_top = 279.0
margin_right = 326.0
margin_bottom = 384.0
size_flags_horizontal = 3
text = "0"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_number"
method_binds = [ 0 ]

[node name="button_inf" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_left = 314.0
margin_top = 279.0
margin_right = 483.0
margin_bottom = 384.0
size_flags_horizontal = 3
text = "âˆž"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_inf"

[node name="button_ok" type="Button" parent="keyboard/margin_container/v_box_container/grid_container"]
margin_left = 471.0
margin_top = 279.0
margin_right = 640.0
margin_bottom = 384.0
size_flags_horizontal = 3
text = "OK"
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_keypad_ok"

[node name="label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.0
margin_top = 64.0
margin_right = 147.0
margin_bottom = 121.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "screen_title_edit_value"
align = 1
__meta__ = {
"_edit_lock_": true
}
